Converted to Scss from Sass; Top section UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,26 @@
-<router-outlet></router-outlet>
+
+<div class="app-container">
+
+  <div class="top-section">
+
+    <p class="title">
+      11:11
+    </p>
+    <p class="subtitle">
+      2 February 2023
+    </p>
+
+  </div>
+
+  <div class="content-section">
+    <p>Content section</p>
+    <router-outlet></router-outlet>
+
+  </div>
+
+  <div class="bottom-section">
+    <p>Bottom section</p>
+  </div>
+
+</div>
+
