Implemented UI treatments for Action buttons
--Styles, before pseudo element, hover, gradients

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="bottom-section">
-    <p>Bottom section</p>
+    <rb-action-buttons></rb-action-buttons>
   </div>
 
 </div>
