--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 <div class="app-container" data-test-id="app-container">
 
   <div class="top-section" data-test-id="top-section">
@@ -19,12 +17,8 @@
 
   </div>
 
-  <div class="bottom-section" data-test-id="bottom-section">
-    <p>Bottom section</p>
+  <div class="bottom-section">
+    <rb-action-buttons></rb-action-buttons>
   </div>
 
 </div>
-
-=======
-<router-outlet></router-outlet>
->>>>>>> 1a7b65d (Initial commit)
