Styles and animations for bottom Action buttons

--- a/src/app/action-buttons/action-buttons.component.html
+++ b/src/app/action-buttons/action-buttons.component.html
@@ -1,27 +1,27 @@
 <div class="action-buttons-container">
     
-    <div class="button-container bookmark-tab">
+    <a routerLink="bookmarks" routerLinkActive="selected" class="button-container bookmark-tab">
         
         <div class="action-button">
             <i class="material-icons-outlined">bookmarks</i>
         </div>
         
-    </div>
+    </a>
     
-    <div class="button-container todo-tab">
+    <a routerLink="todos" routerLinkActive="selected" class="button-container todo-tab">
         
         <div class="action-button ">
             <i class="material-icons-outlined">check</i>
         </div>
         
-    </div>
+    </a>
     
-    <div class="button-container notes-tab">
+    <a routerLink="notes" routerLinkActive="selected" class="button-container notes-tab">
         
         <div class="action-button">
             <i class="material-icons-outlined">notes</i>
         </div>
     
-    </div>
+    </a>
 
 </div>
