--- a/src/app/action-buttons/action-buttons.component.scss
+++ b/src/app/action-buttons/action-buttons.component.scss
@@ -12,14 +12,16 @@
     padding: 10px;
 
     .button-container {
+        outline: none; 
         position: relative;
+        text-decoration: none;
         
         .action-button {
             display: flex;
             padding: 18px;
+            transition: all 0.2s ease-out;
             
             &::before{
-                
                 border-radius: 10px;
                 content: '';
                 position: absolute;
@@ -27,10 +29,7 @@
                 width: 100%;
                 top: 0;
                 left: 0;
-                // z-index: -1;
-
                 opacity: 0.9;
-                transition: all 0.2s;
             }
 
             &:hover::before {
@@ -44,6 +43,53 @@
                 position: relative;
             }
         }
+
+        &.selected {
+            // outline: none;
+        }
+
+        &.selected .action-button {
+            transform: translateY(-50%);
+            transition-duration: 0.4s;
+            transition-timing-function: cubic-bezier(0, 0, 0, 2);
+        }
+
+        &.selected .action-button::before {
+            border-radius: 50%;
+            box-shadow: 0px 7px 17px rgba(black, 0.12);
+            opacity: 1;
+            transform: scale(1.1);
+            transition-delay: 0.2s;
+            transition-duration: 0.4s;
+        }
+
+        // bar at bottom of container
+        &::after {
+            background-color: rgba(white, 0.85);
+            bottom: -10px;
+            content: '';
+            position: absolute;
+            height: 3px;
+            left: 0;
+            margin: auto;
+            right: 0;
+            transition: all 0.2s;
+            width: 50%;
+
+            // hide by default
+            opacity: 0;
+
+            transform: scaleX(0);
+        }
+
+        &.selected::after {
+            // only show when selected
+            opacity: 1;
+            
+            transform: scaleX(1);
+            transition-delay: 0.28s;
+        }
+        
     }
 
     .bookmark-tab .action-button::before {
