Center section container layout html css

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,1 +1,20 @@
-<p>bookmarks works!</p>
+<div class="bookmarks-container">
+
+    <div class="content-container">
+
+        <div class="tiles-container">
+        
+            <div class="bookmark-tile">
+                <img src="http://wikipedia.org/favicon.ico" alt="">
+            </div>
+
+            <div class="bookmark-tile">
+                <img src="http://google.com/favicon.ico" alt="">
+            </div>
+
+        </div>
+
+    </div>
+
+
+</div>
