Implements Bookmarks/BookmarkTile UI elements and styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,8 @@
     .content-section {
         // background-color: var(--middle-bg-color);
         flex-grow: 1;
+        // needed for overflow-y behavior in component container
+        min-height: 0;
     }
 
     .bottom-section {
