--- a/src/app/bookmark-tile/bookmark-tile.component.html
+++ b/src/app/bookmark-tile/bookmark-tile.component.html
@@ -1,1 +1,4 @@
-<p>bookmark-tile works!</p>
+<div class="bookmark-tile">
+    <img src="http://google.com/favicon.ico" alt="">
+    <p class="tile-text">Google</p>
+</div>
