--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -3,15 +3,48 @@
     <div class="content-container">
 
         <div class="tiles-container">
-        
-            <div class="bookmark-tile">
-                <img src="http://wikipedia.org/favicon.ico" alt="">
-            </div>
 
-            <div class="bookmark-tile">
-                <img src="http://google.com/favicon.ico" alt="">
-            </div>
-
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            <rb-bookmark-tile></rb-bookmark-tile>
+            
         </div>
 
     </div>
