Implements Todos view UI elements and styles

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,1 +1,24 @@
-<p>todos works!</p>
+<div class="todos-container">
+
+    <div class="content-container">
+        
+        <div class="todo-item completed">
+        
+            <div class="check-box">
+                <i class="material-icons-outlined">check</i>
+            </div>
+            <p class="todo-text">This is some cool todo text dude!</p>
+        
+        </div>
+
+        <div class="todo-item">
+        
+            <div class="check-box">
+                <i class="material-icons-outlined">check</i>
+            </div>
+            <p class="todo-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis inventore totam voluptas dolor, officiis consequuntur nobis impedit quibusdam officia, laudantium nostrum sunt fugiat rerum suscipit natus beatae, est corporis perspiciatis?</p>
+        
+        </div>
+
+    </div>
+</div>
