--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,1 +1,26 @@
-<p>notes works!</p>
+
+
+<div class="notes-container">
+
+    <div class="content-container">
+
+        <div class="notes-list">
+
+            <div class="note-card">
+
+                <div class="note-card-title">
+                    Note Title
+
+                </div>
+                
+                <div class="note-card-content">
+                    note content dude!
+                </div>
+            
+            </div>
+        
+        </div>
+    
+    </div>
+
+</div>
