Implemented route transitions animations for each view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
 
   </div>
 
-  <div class="content-section">
+  <div class="content-section" [@routeAnim]="prepareRoute(outlet)">
     
-    <router-outlet></router-outlet>
+    <router-outlet #outlet="outlet"></router-outlet>
 
   </div>
 
