Refactors ActionButtons css class names to convey button vs front (where animations occur)

--- a/src/app/action-buttons/action-buttons.component.html
+++ b/src/app/action-buttons/action-buttons.component.html
@@ -1,24 +1,28 @@
 <div class="action-buttons-container">
     
-    <a routerLink="bookmarks" routerLinkActive="selected" class="button-container bookmark-tab">
+    <a routerLink="bookmarks"
+        routerLinkActive="selected"
+        class="action-button bookmarks-button"
+        data-test-id="bookmarks-button"
+        >
         
-        <div class="action-button">
+        <div class="action-button-front">
             <i class="material-icons-outlined">bookmarks</i>
         </div>
         
     </a>
     
-    <a routerLink="todos" routerLinkActive="selected" class="button-container todo-tab">
+    <a routerLink="todos" routerLinkActive="selected" class="action-button todo-button">
         
-        <div class="action-button ">
+        <div class="action-button-front">
             <i class="material-icons-outlined">check</i>
         </div>
         
     </a>
     
-    <a routerLink="notes" routerLinkActive="selected" class="button-container notes-tab">
+    <a routerLink="notes" routerLinkActive="selected" class="action-button notes-button">
         
-        <div class="action-button">
+        <div class="action-button-front">
             <i class="material-icons-outlined">notes</i>
         </div>
     
