Added/extended testing harnesses and tests where needed

--- a/src/app/action-buttons/action-buttons.component.html
+++ b/src/app/action-buttons/action-buttons.component.html
@@ -12,7 +12,11 @@
         
     </a>
     
-    <a routerLink="todos" routerLinkActive="selected" class="action-button todo-button">
+    <a routerLink="todos" 
+        routerLinkActive="selected"
+        class="action-button todo-button"
+        data-test-id="todos-button"
+        >
         
         <div class="action-button-front">
             <i class="material-icons-outlined">check</i>
@@ -20,7 +24,11 @@
         
     </a>
     
-    <a routerLink="notes" routerLinkActive="selected" class="action-button notes-button">
+    <a routerLink="notes" 
+        routerLinkActive="selected"
+        class="action-button notes-button"
+        data-test-id="notes-button"
+        >
         
         <div class="action-button-front">
             <i class="material-icons-outlined">notes</i>
