--- a/src/app/bookmark-tile/bookmark-tile.component.html
+++ b/src/app/bookmark-tile/bookmark-tile.component.html
@@ -1,4 +1,4 @@
-<div class="bookmark-tile">
-    <img src="http://google.com/favicon.ico" alt="">
-    <p class="tile-text">Google</p>
+<div class="bookmark-tile" data-test-id="bookmark-tile">
+    <img src="http://google.com/favicon.ico" alt="" data-test-id="bookmark-tile-image">
+    <p class="tile-text" data-test-id="bookmark-tile-text">Google</p>
 </div>
