--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -2,7 +2,7 @@
 
     <div class="content-container">
         
-        <div class="todo-item completed">
+        <div class="todo-item completed" data-test-id="todo-card">
         
             <div class="check-box">
                 <i class="material-icons-outlined">check</i>
@@ -11,7 +11,7 @@
         
         </div>
 
-        <div class="todo-item">
+        <div class="todo-item" data-test-id="todo-card">
         
             <div class="check-box">
                 <i class="material-icons-outlined">check</i>
