--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,13 @@
   </div>
 
 
-  <div class="content-section" [@routeAnim]="prepareRoute(outlet)">
+  <div class="content-section" [@routeAnim]="prepareRoute(outlet)"  data-test-id="content-section">
     
     <router-outlet #outlet="outlet"></router-outlet>
 
   </div>
 
-  <div class="bottom-section">
+  <div class="bottom-section" data-test-id="bottom-section">
     <rb-action-buttons></rb-action-buttons>
   </div>
 
