--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -6,7 +6,7 @@
 
         <div class="notes-list">
 
-            <div class="note-card">
+            <div class="note-card" data-test-id="note-card">
 
                 <div class="note-card-title">
                     Note Title
@@ -15,6 +15,19 @@
                 
                 <div class="note-card-content">
                     note content dude!
+                </div>
+            
+            </div>
+
+            <div class="note-card" data-test-id="note-card">
+
+                <div class="note-card-title">
+                    Note Title 2
+
+                </div>
+                
+                <div class="note-card-content">
+                    wow note content 2 dude!
                 </div>
             
             </div>
