Scaffolding and implementation for AddNote component UI elements and styling
--Also moves button styles to styles.scss

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -33,6 +33,15 @@
             </div>
         
         </div>
+
+        <div class="buttons-container centered">
+
+            <a routerLink="/notes/add" class="app-button" data-test-id="add-button">
+                <i class="material-icons-outlined">add</i>
+                <p>Add</p>
+            </a>
+            
+        </div>
     
     </div>
 
