--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -4,8 +4,10 @@
     height: 100%;
     overflow-y: auto;
 
-
     .notes-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
 
         .note-card {
             background-color: rgba(black, 0.5);
