--- a/src/app/add-note/add-note.component.scss
+++ b/src/app/add-note/add-note.component.scss
@@ -11,7 +11,7 @@
         backdrop-filter: blur(20px);
     }
     
-    .title {
+    .heading {
         font: 600 24px/28px var(--title-font-family);
         letter-spacing: -2px;
         margin-bottom: 25px;
