--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -42,7 +42,7 @@
             <rb-bookmark-tile></rb-bookmark-tile>
             <rb-bookmark-tile></rb-bookmark-tile>
             <rb-bookmark-tile></rb-bookmark-tile>
-            <rb-bookmark-tile></rb-bookmark-tile> -->
+            <rb-bookmark-tile></rb-bookmark-tile>
             
         </div>
 
