--- a/src/app/add-note/add-note.component.html
+++ b/src/app/add-note/add-note.component.html
@@ -1,6 +1,6 @@
 
 <div class="add-note-container content-container has-blurred-white-bg" data-test-id="note-card">
-    <p class="title">New Note</p>
+    <p class="heading">New Note</p>
     
     <form data-test-id="note-form">
         
@@ -10,11 +10,8 @@
                data-test-id="title-input"
         >
 
-        <textarea class="text-area"
-                  placeholder="Enter note content..."
-                  data-test-id="note-textarea"
-        >
-        </textarea>
+            <!-- placeholder doesn't appear if textarea tag occupies more than one line -->
+        <textarea class="text-area" placeholder="Enter note content..." data-test-id="note-textarea"></textarea>
 
         <div class="buttons-container justify-right">
             
